--- a/tenses.html
+++ b/tenses.html
@@ -55,10 +55,10 @@
         <a href="#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Future<span class="iconify" data-icon="bytesize:chevron-bottom"data-width="17" data-height="17"></span></a>
         <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
 
-            <li><a href="future.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Simple Future</a></li>
-            <li><a href="future-continuous.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Future Continuous</a></li>
-            <li><a href="future-perfect.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Future Perfect</a></li>
-            <li><a href="future-perfect-continuous.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Future Perfect <br>&nbsp;Continuous</a></li>
+            <li><a href="9-future-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Simple Future</a></li>
+            <li><a href="10-future-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Future Continuous</a></li>
+            <li><a href="11-future-perfect-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Future Perfect</a></li>
+            <li><a href="12-future-perfect-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Future Perfect <br>&nbsp;Continuous</a></li>
 
         </ul>
       </li>
@@ -67,10 +67,10 @@
         <a href="#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Past Future<span class="iconify" data-icon="bytesize:chevron-bottom"data-width="17" data-height="17"></span></a>
         <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
 
-          <li><a href="past-future.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future</a></li>
-          <li><a href="past-future-continuous.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future Continuous</a></li>
-          <li><a href="past-future-perfect.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future Perfect</a></li>
-          <li><a href="past-future-perfect-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future Perfect <br>&nbsp;Continuous</a></li>
+          <li><a href="13-past-future-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future</a></li>
+          <li><a href="14-past-future-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future Continuous</a></li>
+          <li><a href="15-past-future-perfect-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future Perfect</a></li>
+          <li><a href="16-past-future-perfect-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future Perfect <br>&nbsp;Continuous</a></li>
 
         </ul>         
       </li>
@@ -228,10 +228,10 @@
 
               <span>
 
-              &nbsp;&nbsp;&nbsp;&nbsp;IX. <a href="#" class="hover-link text-dark">SIMPLE FUTURE TENSE</a> <br>
-              &nbsp;&nbsp;&nbsp;&nbsp;X. <a href="#" class="hover-link text-dark ">FUTURE CONTINUOUS TENSE</a> <br>
-              &nbsp;&nbsp;&nbsp;&nbsp;XI. <a href="#" class="hover-link text-dark ">FUTURE PERFECT TENSE</a> <br>
-              &nbsp;&nbsp;&nbsp;&nbsp;XII. <a href="#" class="hover-link text-dark ">FUTURE PERFECT CONTINUOUS TENSE</a> <br>
+              &nbsp;&nbsp;&nbsp;&nbsp;IX. <a href="9-future-tense.html" class="hover-link text-dark">SIMPLE FUTURE TENSE</a> <br>
+              &nbsp;&nbsp;&nbsp;&nbsp;X. <a href="10-future-continuous-tense.html" class="hover-link text-dark ">FUTURE CONTINUOUS TENSE</a> <br>
+              &nbsp;&nbsp;&nbsp;&nbsp;XI. <a href="11-future-perfect-tense.html" class="hover-link text-dark ">FUTURE PERFECT TENSE</a> <br>
+              &nbsp;&nbsp;&nbsp;&nbsp;XII. <a href="12-future-perfect-continuous-tense.html" class="hover-link text-dark ">FUTURE PERFECT CONTINUOUS TENSE</a> <br>
               <br>
 
             </span>
@@ -239,10 +239,10 @@
 
             <span>
 
-              &nbsp;&nbsp;&nbsp;&nbsp;XIII. <a href="#" class="hover-link text-dark">PAST FUTURE TENSE</a> <br>
-              &nbsp;&nbsp;&nbsp;&nbsp;XIV. <a href="#" class="hover-link text-dark ">PAST FUTURE CONTINUOUS TENSE</a> <br>
-              &nbsp;&nbsp;&nbsp;&nbsp;XV. <a href="#" class="hover-link text-dark ">PAST FUTURE PERFECT TENSE</a> <br>
-              &nbsp;&nbsp;&nbsp;&nbsp;XVI. <a href="#" class="hover-link text-dark ">PAST FUTURE PERFECT CONTINUOUS TENSE</a> 
+              &nbsp;&nbsp;&nbsp;&nbsp;XIII. <a href="13-past-future-tense.html" class="hover-link text-dark">PAST FUTURE TENSE</a> <br>
+              &nbsp;&nbsp;&nbsp;&nbsp;XIV. <a href="14-past-future-continuous-tense.html" class="hover-link text-dark ">PAST FUTURE CONTINUOUS TENSE</a> <br>
+              &nbsp;&nbsp;&nbsp;&nbsp;XV. <a href="15-past-future-perfect-tense.html" class="hover-link text-dark ">PAST FUTURE PERFECT TENSE</a> <br>
+              &nbsp;&nbsp;&nbsp;&nbsp;XVI. <a href="16-past-future-perfect-continuous-tense.html" class="hover-link text-dark ">PAST FUTURE PERFECT CONTINUOUS TENSE</a> 
 
             </span>
           </div>
